<resources>
    <string name="app_name">Lion App</string>
    <string name="url">https://lion-api.herokuapp.com/</string>


    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="register">Register now</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_goods">Lion App - Goods</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>

    <string name="action_settings">Settings</string>

    <string name="title_activity_register">App Lion - Register Now</string>
    <string name="hint_name">Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_age">Age</string>
    <string name="hint_gender">Gender</string>
    <string name="hint_address">Address</string>
    <string name="hint_city">City</string>
    <string name="btn_sign_up">Sign Up</string>
    <string name="err_msg_name">Enter your full name</string>
    <string name="err_msg_email">Enter valid email address</string>
    <string name="err_msg_password">Enter the password</string>

    <string name="hint_category">Category</string>
    <string name="hint_value">Value</string>
    <string name="btn_add_good">Add Good</string>

    <string-array name="gender_array">
        <item>male</item>
        <item>female</item>
    </string-array>
    <string name="title_activity_good_details">Lion App - View Good</string>
</resources>
